jj.cppresult.txt
cur.cpp: In member function 'virtual void MatrixTest_Transpose_Test::TestBody()':
cur.cpp:72:22: error: 'j' was not declared in this scope
     for (int i = 0 ; j < 4; i ++)
                      ^
./check.sh: line 24: ./a.out: No such file or directory
